<resources>
    <string name="app_name" translatable="false">Ft_Hangouts</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="alliance" translatable="false">Alliance</string>
    <string name="union" translatable="false">Union</string>
    <string name="hive" translatable="false">Hive</string>
    <string name="empire" translatable="false">Empire</string>
    <string name="rus" translatable="false">Русский</string>
    <string name="en" translatable="false">English</string>

    <!--Need to translate-->
    <string name="change_photo">Change Photo</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="change_profile">Change profile</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="change_theme">Change theme</string>
    <string name="change_language">Change language</string>
    <string name="def">Default</string>
    <string name="new_contact">Create a new contact</string>
    <string name="status">Status</string>
    <string name="mail">E-Mail</string>
    <string name="success">Contact successfully created !</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contact">Contact</string>
    <string name="editing_contact">Editing contact</string>
    <string name="delete_success">Contact successfully removed !</string>
    <string name="call">Call</string>
    <string name="message">Send message</string>
    <string name="send_message">Sending message</string>
    <string name="send_success">Message sent !</string>
    <string name="remove">Remove</string>

    <string name="error1">3–15 symbols for name only !</string>
    <string name="error2">12 symbols only ! (380-xx-xxx-xx-xx)</string>
    <string name="error3">Only numbers !</string>
    <string name="error4">Valid length of e–mail 5–25 symbols !</string>
    <string name="error5">No permissions</string>
    <string name="error6">Bad mobile number</string>
    <string name="not_unique">Contact with this number already created !</string>

</resources>